[package]
name = "elfsign"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"

authors = ["Jens Reimann <jreimann@redhat.com>"]
description = "Tools for signing elf binaries"
repository = "https://github.com/ctron/elfsign"
categories = ["command-line-utilities", "development-tools"]
keywords = ["elf", "sign", "sigstore"]
readme = "README.md"

[dependencies]
anyhow = "1"
base16 = "0.2.1"
clap = { version = "4", features = ["derive", "cargo"] }
digest = "0.10.6"
ecdsa = "0.15.0"
log = "0.4"
object = { version = "0.30", features = ["all"] }
p256 = "0.12.0"
p384 = "0.12.0"
sha2 = "0.10.6"
signature = {  version = "2.0.0", features = ["digest"] }
sigstore = "0.6"
simplelog = "0.12.0"
tokio = { version = "1", features = ["full"] }
url = "2"
